<resources>
    <string name="app_name">SIA</string>
    <string name="kode_pegawai">Kode Pegawai</string>
    <string name="nama_pegawai">Nama Pegawai</string>
    <string name="gelar_depan">Gelar Depan</string>
    <string name="gelar_belakang">Gelar Belakang</string>
    <string name="nik">NIK</string>
    <string name="file_nik">File NIK</string>
    <string name="npwp">NPWP</string>
    <string name="file_npwp">File NPWP</string>
    <string name="alamat_sekarang">Alamat Sekarang</string>
    <string name="telp_rumah">Telp. Rumah</string>
    <string name="no_hp_1">No. Hp 1</string>
    <string name="e_mail_1">E-mail 1</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="status_keluar">Status Keluar</string>
    <string name="status_pegawai">Status Pegawai</string>
    <string name="nidn">NIDN</string>
    <string name="alamat_ktp">Alamat KTP</string>
    <string name="e_mail_2">E-mail 2</string>
    <string name="no_hp_2">No. Hp 2</string>
    <string name="ubah">Ubah</string>
    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="biodata">biodata</string>
    <string name="ubah_password">ubah password</string>
    <string name="log_out">log out</string>
    <string name="logo">logo</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="password_lama">Password lama</string>
    <string name="password_baru">Password baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi password baru</string>
    <string name="password_t">Password terdiri dari kombinasi huruf dan angka, maksimal 10 karakter.</string>
</resources>
