<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:text="@string/selamat_datang"/>

        <TextView
            android:id="@+id/tvResultUser"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvResultKode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnBiodata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/biodata" />

        <Button
            android:id="@+id/btnUbahPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubah_password" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/log_out" />
    </LinearLayout>


</RelativeLayout>
